Set up the personal subproject.

--- a/Expressions_Personal/README
+++ b/Expressions_Personal/README
@@ -28,19 +28,20 @@ Make at least 20 meaningful commits.
 Personal
 --------
 
-Calorie Counter.
+Food Tracker
 
+Purpose: I'm trying to lose some weight, so a food tracker might be of value to
+me in my daily life.
 
+Givens:
 
-Industry
---------
+How many items did I have for breakfast?
+List each item that I had for breakfast.
 
-Site Traffic Monitor.
+How many items did I have for lunch?
+List each item that I had for lunch.
 
-
-Wacky
------
-
-How many licks does it take to get to the center of a tootsie pop?
+How many items did I have for dinner?
+List each item that I had for dinner.
 
 
