--- a/Expressions_Personal/README
+++ b/Expressions_Personal/README
@@ -28,11 +28,11 @@ Make at least 20 meaningful commits.
 Personal
 --------
 
-Gym Progress Tracker
+Weight Lifting Tracker
 
 Purpose: I go to the gym a lot, so a program that can track my progress, would
 be helpful.
 
-Using a multidimensional array, it tracks how much I have lifted in each
-exercise over the course of a week.
+Tracks the user's progress by taking the user's input on amount lifted per 
+exercise, # of sets performed, and # of reps per set.
 
