--- a/Conditionals_Industry/README
+++ b/Conditionals_Industry/README
@@ -30,6 +30,6 @@ Industry
 
 Mobile First or...?
 
-Takes the users input about what kind of traffic the site is getting (mobile or computer) and compares the
+Takes the users input about what kind of traffic the site is getting (mobile or desktop) and compares the
 two in terms of overall effectiveness. The code will print out which what percent of users are accessing
-the site through mobile devices versus traditional devices, and which one seems to be more popular.
+the site through mobile devices versus desktop devices, and which one seems to be more popular.
