--- a/Functions_Personal/README
+++ b/Functions_Personal/README
@@ -18,3 +18,16 @@ Over all 3 projects, there must be one instance of:
 	A function with 3 parameters
 	At least one logical operator
 Make 20 meaningful commits to github.
+
+
+
+Personal
+--------
+
+Omelette Maker
+
+I love omelettes, but I don't always have the ingredients. The program tells me
+if I have the basic ingredients to get by, or if I have to go shopping.
+
+
+
