--- a/Functions_Industry/README
+++ b/Functions_Industry/README
@@ -18,3 +18,13 @@ Over all 3 projects, there must be one instance of:
 	A function with 3 parameters
 	At least one logical operator
 Make 20 meaningful commits to github.
+
+
+
+Industry
+--------
+
+Web Activity Tracker
+
+Lists the websites you've browsed over the course of the day, and breaks down the time you spent on each site.
+
