--- a/Functions_Wacky/README
+++ b/Functions_Wacky/README
@@ -18,3 +18,13 @@ Over all 3 projects, there must be one instance of:
 	A function with 3 parameters
 	At least one logical operator
 Make 20 meaningful commits to github.
+
+
+
+Wacky
+-----
+
+Rock, Paper, Scissors...!
+
+Play against the program in a best of 3 game of rock, paper, scissors!
+
